--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 
-  body {
+  html, body {
     background-color: black;
     display: flex;
     justify-content: center;
@@ -29,4 +29,10 @@
     text-align: center;
   } 
 
+  .splash2 {
+    background-color: white;
+  }
 
+  .logo-start {
+    color: black;
+  }
