Move splash screen handling to Phaser

--- a/style.css
+++ b/style.css
@@ -1,41 +1,19 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-
-  outline: 2px solid red;
+:html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #000; /* Set a default background if needed */
 }
 
-
-  html, body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .splash-content {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
+/* Center the Phaser canvas in the page */
+#phaser-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
 }
-
-.logo {
-  display: block;
-  max-width: 300%;
-  margin-bottom: 20px;
-}
-
-.splash1 {
-  background-color: black;
-}
-
-  h1 {
-    color:rgb(255, 255, 255);
-    text-align: center;
-  } 
-
-  .splash2 {
-    background-color: white;
-  }
-
-  .logo-start {
-    color: black;
-  }
